--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 
 html {
 	font-size: 62.5%;
+	scroll-behavior: smooth;
 }
 
 body {
@@ -21,6 +22,15 @@ body {
 	font-size: 1.8rem;
 	color: white;
 	line-height: 1.4;
+}
+
+a {
+	text-decoration: none;
+	color: white;
+}
+
+h1 {
+	font-size: 6rem;
 }
 
 #navbar {
@@ -51,11 +61,6 @@ body {
 	padding: 20px;
 }
 
-a {
-	text-decoration: none;
-	color: white;
-}
-
 .nav-link:hover {
 	background-color: var(--custom-blue);
 }
@@ -76,10 +81,6 @@ a {
 	font-size: 3rem;
 	font-style: italic;
 	font-weight: 200;
-}
-
-h1 {
-	font-size: 6rem;
 }
 
 #projects {
@@ -103,7 +104,7 @@ h1 {
 	margin: 0 auto 60px auto;
 	display: grid;
 	grid-gap: 40px;
-	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(410px, 1fr));
 }
 
 .project-link {
@@ -111,9 +112,10 @@ h1 {
 	border-radius: 2px;
 	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 	background-color: var(--custom-gray);
+	max-height: 35vh;
 }
 
-#project-img {
+.project-img {
 	display: block;
 	height: calc(100% - 6.8rem);
 	width: 100%;
@@ -130,8 +132,28 @@ h1 {
 	color: var(--custom-gray);
 	transition: color 0.3s ease-out;
 }
+
 .project-link:hover .brackets {
 	color: #ff7f50;
+}
+
+.btn-show-all {
+	display: inline-block;
+	padding: 1rem 2rem;
+	border-radius: 2px;
+	font-size: 2rem;
+	background-color: var(--custom-gray);
+	transition: background-color 0.3s ease-out;
+	text-align: center;
+}
+
+.btn-show-all:hover {
+	background-color: var(--custom-red);
+}
+
+.btn-show-all:hover>i {
+	transition: transform 0.3s ease-out;
+	transform: translateX(2px);
 }
 
 #contact-section {
@@ -169,23 +191,4 @@ h1 {
 
 .contact-link:hover {
 	transform: translateY(5px);
-}
-
-.btn-show-all {
-	display: inline-block;
-	padding: 1rem 2rem;
-	border-radius: 2px;
-	font-size: 2rem;
-	background-color: var(--custom-gray);
-	transition: background-color 0.3s ease-out;
-	text-align: center;
-}
-
-.btn-show-all:hover {
-	background-color: var(--custom-red);
-}
-
-.btn-show-all:hover i {
-	transition: transform 0.3s ease-out;
-	transform: translateX(2px);
 }
